SC# refactored manifest and added permission to allow context data management, also added ContextService to manifest

--- a/aware-ContextPlugin/src/main/res/values/strings.xml
+++ b/aware-ContextPlugin/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Context</string>
+    <string name="manage_context_data_permission_description">Allow manage access to context data in ContextPlugin</string>
+    <string name="manage_context_data_permission_label">Manage ContextPlugin\'s context</string>
 </resources>
