RF# removed aware-context resources and refactored resources to refer to plugin's new name

--- a/aware-PoiRecommenderPlugin/src/main/res/values/strings.xml
+++ b/aware-PoiRecommenderPlugin/src/main/res/values/strings.xml
@@ -1,11 +1,6 @@
 <resources>
-    <string name="app_name">Context</string>
-    <string name="context_provider_label">ContextProvider</string>
-    <string name="context_history_provider_label">ContextHistoryProvider</string>
-    <string name="manage_context_data_permission_description">Allow manage access to context data in ContextPlugin</string>
-    <string name="manage_context_data_permission_label">Manage ContextPlugin\'s context</string>
-    <string name="read_current_context_data_permission_description">Allow read access to current context data in ContextPlugin</string>
-    <string name="read_current_context_data_permission_label">Read ContextPlugin\'s current context</string>
-    <string name="write_current_context_data_permission_description">Allow write access to current context data in ContextPlugin</string>
-    <string name="write_current_context_data_permission_label">Write ContextPlugin\'s current context</string>
+    <string name="app_name">PoiRecommender</string>
+    <string name="poirecommender_provider_label">PoiRecommenderProvider</string>
+    <string name="manage_poirecommender_data_permission_description">Allow manage access to data in PoiRecommenderPlugin</string>
+    <string name="manage_poirecommender_data_permission_label">Manage PoiRecommenderPlugin\'s data</string>
 </resources>
